Fixed spacing between sources and standardtegn

--- a/src/main/resources/assets/styles/_table.scss
+++ b/src/main/resources/assets/styles/_table.scss
@@ -12,6 +12,12 @@
     display: inline-block;
     margin-top: 20px;
   }
+
+  .source {
+    a {
+      margin-top: 10px;
+    }
+  }
 }
 
 thead {
